Fix trending topics layout bug in win10, firefox 71, 1920 x 1080px

--- a/src/Components/Main/SharedComponents/TrendingTopics/TrendingTopics.css
+++ b/src/Components/Main/SharedComponents/TrendingTopics/TrendingTopics.css
@@ -5,6 +5,7 @@
 }
 
 .topic-list {
+  max-width: 1024px;
   white-space: nowrap;
   overflow-x: scroll;
   overflow-y: hidden;
